--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -35,6 +35,7 @@ AudioStreamPlayer2D:scale=true
 
 project_settings=Rect2(510, 190, 900, 700)
 create_new_node=Rect2(592, 202, 900, 700)
+export=Rect2(490, 221, 900, 700)
 
 [script_setup]
 
@@ -43,3 +44,7 @@ last_selected_language="GDScript"
 [color_picker]
 
 recent_presets=PackedColorArray(0.286275, 1, 1, 1, 5.0056e-06, 0.710872, 0.711956, 1, 0, 0.486275, 0.713726, 1, 0.235294, 0.486275, 0.713726, 1, 0.235294, 0.486275, 0.854902, 1, 0.235294, 0.486275, 0.847059, 1, 0.145098, 0.486275, 0.847059, 1, 0.145098, 0.415686, 0.847059, 1, 0.188235, 0.415686, 0.847059, 1)
+
+[export_options]
+
+default_filename="Godot 2D Game Tutorial"
