--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -37,7 +37,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://HUD.gd", "res://main.gd", "res://Mob.gd", "res://Player.gd"]
-selected_script="res://main.gd"
+selected_script="res://HUD.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
